Mis a jour documentation et suppression de la page temporaire et composant front
